# kokkos-spade-integration-test

./: .gitignore
init/: CMakeLists.txt  main.cc  vdf.x
init/inc/: local.h
